--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,8 @@ spring.mvc.view.suffix=.jsp
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-
+spring.mail.username=testingpurposeap
+spring.mail.password=Navraaj@12
 spring.mail.properties.mail.smtp.starttls.enable = true
 spring.mail.properties.mail.smtp.starttls.enable.required = true
 spring.mail.properties.mail.smtp.auth = true
